--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "@worldcoin/id": "^0.8.0",
         "axios": "^0.27.2",
         "ethers": "^5.6.9",
         "nft.storage": "^3.0.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.0.1",
